--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Learning Fetch Api</h1>
             <button onclick="fetchApiData()">Click to create a list</button>
         </div>
-        <ul id="fill_list"></ul>
+        <ul id="list"></ul>
     </main>
 
 
